--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 <body>
     <h1>Hello Thet Htet Aung</h1>
     <p>Lorem ipsum dolor sit amet.</p>
+    <ul>
+        <li>Item One</li>
+        <li>Item Two</li>
+        <li>Item Three</li>
+    </ul>
 </body>
 
 </html>
